# Pico-DAP

./: LICENSE  Pi_Pico_Zero.kicad_sym  Pi_Pico_Zero_CMSIS_DAP.kicad_pcb  Pi_Pico_Zero_CMSIS_DAP.kicad_sch  README.md  pi-cmsis-dap.cfg  pico-dap.cfg
Docs/: SWD – ARM’s alternative to JTAG – Kudelski Security Research.html  SWD_Notes.md
Docs/SWD – ARM’s alternative to JTAG – Kudelski Security Research_files/: Untitled  Untitled.css  Untitled_002  Untitled_003.css  css.css  master.html
Firmware/Mk0/: README.md  hal_config.h  usb_descriptors.c
Firmware/Mk0/make/: Makefile
Firmware/Mk0/tools/: bin2uf2
Firmware/MkI/: CMakeLists.txt  README.md
Firmware/MkI/include/: pin_config.h  tusb_config.h  usb_descriptors.h
Firmware/MkI/include/cmsis/: dap_config.h
Firmware/MkI/src/: main.c  usb_descriptors.c
Firmware/MkI/src/sys/: startup_rp2040.c
Firmware/MkI/src/usb/: usb_descriptors.c
Firmware/Original/: README.md  hal_config.h
Firmware/Original/make/: Makefile
Firmware/bins/Mk0/: pico-dap.uf2
PCB/: Pi_Pico_Zero_CMSIS_DAP.kicad_pcb  Pi_Pico_Zero_CMSIS_DAP.kicad_pro  Pi_Pico_Zero_CMSIS_DAP.kicad_sch  sym-lib-table
PCB/Footprints.pretty/: Conn_2x5_Dual_Side.kicad_mod  Pi_Pico_Zero_Center_Hole.kicad_mod
PCB/Pico-DAP-Fullsize/: Pico-DAP-Fullsize.kicad_pcb  Pico-DAP-Fullsize.kicad_pro  Pico-DAP-Fullsize.kicad_sch  sym-lib-table
PCB/Pico-DAP-Fullsize/Footprints.pretty/: Conn_2x2_Dual_Side.kicad_mod  RPi_Pico_SMD_TH.kicad_mod
PCB/Pico-DAP-Zero/: Pico-DAP-Zero.kicad_pcb  Pico-DAP-Zero.kicad_sch  sym-lib-table
(+1 files in other folders)
